--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@tanstack/react-store": "0.6.1",
     "@tanstack/store": "0.6.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-reconciler": "0.29.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@types/react-reconciler": "0.28.8",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.15.0",
     "eslint-plugin-react-hooks": "^5.0.0",
