--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -7,6 +7,7 @@
     "module": "ESNext",
     "skipLibCheck": true,
     "experimentalDecorators": true,
+    "allowJs": true,
 
     /* Bundler mode */
     "moduleResolution": "bundler",
